# MPAS-ESM

./: .gitmodules  NEWCASE.md  build.sh  newcase.sh
src/CMEPS-interface/: CMakeLists.txt
src/MOM6_interface/: CMakeLists.txt  mom6_files.cmake
